--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "apollo-boost": "^0.4.9",
+    "cloudinary": "^1.26.3",
+    "cloudinary-react": "^1.7.0",
     "graphql": "^15.5.1",
     "jwt-decode": "^3.1.2",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
