--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "apollo-server-express": "^3.1.2",
     "bcrypt": "^4.0.1",
+    "cloudinary": "^1.26.3",
+    "cloudinary-react": "^1.7.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "graphql": "^15.5.1",
