--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 CLOUDINARY_CLOUD_NAME= dj4jhhk4i           
 CLOUDINARY_API_KEY= 839751273948377                   
 CLOUDINARY_API_SERCRET= 9gmdyIbYnbsqYWFIPiFomczgwmo
+SKIP_PREFLIGHT_CHECK=true
