--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,17 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.4.5",
+    "@google-cloud/storage": "^5.13.1",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "apollo-boost": "^0.4.9",
+    "axios": "^0.21.1",
     "cloudinary": "^1.26.3",
     "cloudinary-react": "^1.7.0",
+    "firebase": "^8.10.0",
     "graphql": "^15.5.1",
     "jwt-decode": "^3.1.2",
     "prop-types": "^15.7.2",
