--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^3.1.2",
+    "axios": "^0.21.1",
     "bcrypt": "^4.0.1",
     "cloudinary": "^1.26.3",
     "cloudinary-react": "^1.7.0",
