--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,16 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "apollo-boost": "^0.4.9",
+    "emailjs-com": "^3.2.0",
     "graphql": "^15.5.1",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.14.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-testify": "0.0.4",
+    "react-toastify": "^8.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
