--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "concurrently": "^6.2.1"
   },
   "dependencies": {
-    "cloudinary": "^1.26.3"
+    "cloudinary": "^1.26.3",
+    "nodemailer": "^6.6.3"
   }
 }
