--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "apollo-server-express": "^3.1.2",
     "bcrypt": "^4.0.1",
     "cloudinary": "^1.26.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "graphql": "^15.5.1",
